--- a/crates/x-util/Cargo.toml
+++ b/crates/x-util/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "x-protocol"
+name = "x-util"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.25"
-x-util = { path = "../x-util" }
+libc = "0.2"
+winsafe = { version = "0.0.11", features = ["advapi"] }
