--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 
 [dependencies]
 x-protocol = { path = "./crates/x-protocol" }
-x-util = { path = "./crates/x-util" }
 
 [workspace]
 members = [
   "./crates/x-protocol",
-  "./crates/x-util"
+  "./crates/x-util",
+  "./crates/x-engine",
+  "./crates/x-parser",
+  "./crates/x-render",
+  "./crates/x-input"
 ]
