--- a/crates/x-engine/Cargo.toml
+++ b/crates/x-engine/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "x-protocol"
+name = "x-engine"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.24.0"
 x-util = { path = "../x-util" }
+x-input = { path = "../x-input" }
+x-render = { path = "../x-render" }
+x-protocol = { path = "../x-protocol" }
