--- a/crates/x-parser/Cargo.toml
+++ b/crates/x-parser/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "x-util"
+name = "x-parser"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libc = "0.2"
-winsafe = { version = "0.0.11", features = ["advapi"] }
-home = "0.5.4"
-crossterm = "0.25.0"
