--- a/crates/x-parser/Cargo.toml
+++ b/crates/x-parser/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+x-protocol = { path = "../x-protocol" }
+x-input = { path = "../x-input" }
