--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-x-protocol = { path = "./crates/x-protocol" }
+x-engine = { path = "./crates/x-engine" }
 
 [workspace]
 members = [
