--- a/crates/x-util/Cargo.toml
+++ b/crates/x-util/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
-winsafe = { version = "0.0.11", features = ["advapi"] }
 home = "0.5.4"
 crossterm = "0.25.0"
+winapi = { version = "0.3.9" }
