--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,5 @@ members = [
   "./crates/x-engine",
   "./crates/x-parser",
   "./crates/x-render",
-  "./crates/x-input",
-  "./crates/x-repl"
+  "./crates/x-input"
 ]
