--- a/crates/x-engine/Cargo.toml
+++ b/crates/x-engine/Cargo.toml
@@ -11,3 +11,4 @@ x-input = { path = "../x-input" }
 x-render = { path = "../x-render" }
 x-protocol = { path = "../x-protocol" }
 x-parser = { path = "../x-parser" }
+x-checker = { path = "../x-checker" }
